--- a/Languages/German/Keyed/ColonistBar_KF.xml
+++ b/Languages/German/Keyed/ColonistBar_KF.xml
@@ -46,6 +46,7 @@
   <CBKF.Settings.useZoomToMouse>Benutze ZoomToMouse™</CBKF.Settings.useZoomToMouse>
   <CBKF.Settings.Vanilla>Vanilla</CBKF.Settings.Vanilla>
   <CBKF.Settings.Weapons>Waffen</CBKF.Settings.Weapons>
+  <CBKF.Settings.useFollowMMC>FolgeMir™ mit mittlerer Maustaste auf Portrait starten</CBKF.Settings.useFollowMMC>
   <FollowMe.Cancel> {0} wird nicht mehr Verfolgt.</FollowMe.Cancel>
   <FollowMe.Follow> Verfolge jetzt {0}.</FollowMe.Follow>
   <FollowMe.MiddleClick>Mittlerer Mausklick auf Kolonisten für FolgeMir™</FollowMe.MiddleClick>
