--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ColonistBarKF
 
+1.0.6.0 - Mod updated for 1.3 and passed autotests
+
+
 1.0.5.0 - The extra faction icon was under the sleeping Z, moved to top right corner instead
 
 
