--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ColonistBarKF
 
+1.0.7.0 - Things changed from the beta to the release, had to recompile
+
+
 1.0.6.0 - Mod updated for 1.3 and passed autotests
 
 
