Mod updated for 1.4 and passed autotests. Used DeepL to update translations for ChineseSimplified, French, German, Russian, Spanish

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for ColonistBarKF
 
+1.4.1 - Mod updated for 1.4 and passed autotests.
+Used DeepL to update translations for ChineseSimplified, French, German, Russian, Spanish
+
+
 1.3.2 - It should now be possible to manually sort pawns with right-click drag (as in vanilla)
 
 
