--- a/Languages/English/Keyed/ColonistBar_KF.xml
+++ b/Languages/English/Keyed/ColonistBar_KF.xml
@@ -31,6 +31,8 @@
   <CBKF.Settings.RevertSettings>Revert Colonist Bar settings</CBKF.Settings.RevertSettings>
   <CBKF.Settings.SettingsColonistBar>Colonist Bar KF Settings</CBKF.Settings.SettingsColonistBar>
   <CBKF.Settings.SexAge>Sex then Age</CBKF.Settings.SexAge>
+  <CBKF.Settings.Age>Age</CBKF.Settings.Age>
+  <CBKF.Settings.Reverse>Reverse sort</CBKF.Settings.Reverse>
   <CBKF.Settings.useBottom>Bottom</CBKF.Settings.useBottom>
   <CBKF.Settings.UseExternalMoodBar>Use external MoodBars™: </CBKF.Settings.UseExternalMoodBar>
   <CBKF.Settings.useGender>Use background color by gender</CBKF.Settings.useGender>
