--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for ColonistBarKF
 
+1.4.2 - Added age-sort and reverse-sort.
+Used DeepL to update translations for ChineseSimplified, French, German, Russian, Spanish
+
+
 1.4.1 - Mod updated for 1.4 and passed autotests.
 Used DeepL to update translations for ChineseSimplified, French, German, Russian, Spanish
 
