--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ColonistBarKF
 
+1.5.0 - Mod updated for 1.5 and passed autotests
+
+
 1.4.2 - Added age-sort and reverse-sort.
 Used DeepL to update translations for ChineseSimplified, French, German, Russian, Spanish
 
