--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ColonistBarKF
 
+1.5.2 - Added Melee sorting
+
+
 1.5.1 - Bar should now also show mutants. Fixed some NRE when comparing disabled skills
 
 
