--- a/Languages/ChineseSimplified/Keyed/ColonistBar_KF.xml
+++ b/Languages/ChineseSimplified/Keyed/ColonistBar_KF.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CBKF.Settings.Advanced>高级设置</CBKF.Settings.Advanced>
   <CBKF.Settings.BarPosition>主要设置</CBKF.Settings.BarPosition>
