--- a/Languages/ChineseTraditional/Keyed/ColonistBar_KF.xml
+++ b/Languages/ChineseTraditional/Keyed/ColonistBar_KF.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CBKF.Settings.ColonistBar>殖民者頭像 KF</CBKF.Settings.ColonistBar>
   <CBKF.Settings.Advanced>高級設置</CBKF.Settings.Advanced>
