--- a/Languages/French/Keyed/ColonistBar_KF.xml
+++ b/Languages/French/Keyed/ColonistBar_KF.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CBKF.Settings.ColonistBar>Barre des Colons de KF</CBKF.Settings.ColonistBar>
   <CBKF.Settings.Advanced>Paramètres Avancés</CBKF.Settings.Advanced>
