--- a/Languages/Spanish/Keyed/ColonistBar_KF.xml
+++ b/Languages/Spanish/Keyed/ColonistBar_KF.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CBKF.Settings.Advanced>Configuración Avanzada</CBKF.Settings.Advanced>
   <CBKF.Settings.BarPosition>Configuración Principal de Barra de Colonos</CBKF.Settings.BarPosition>
