--- a/Languages/German/Keyed/ColonistBar_KF.xml
+++ b/Languages/German/Keyed/ColonistBar_KF.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CBKF.Settings.MaxColonistBarWidth>Maximale Leistenbreite</CBKF.Settings.MaxColonistBarWidth>
   <PSI.Settings.ShowRelationsOnStrangers>Zeige Pawn Health Icon™ on Fremden mit Verwandschaft</PSI.Settings.ShowRelationsOnStrangers>
