--- a/Languages/Russian/Keyed/ColonistBar_KF.xml
+++ b/Languages/Russian/Keyed/ColonistBar_KF.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <CBKF.Settings.Advanced>Дополнительные настройки</CBKF.Settings.Advanced>
   <CBKF.Settings.BarPosition>Основные настройки</CBKF.Settings.BarPosition>
