--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ColonistBarKF
 
+1.5.4 - Fixed targeting from item
+
+
 1.5.3 - ColonyMutants was changed to ColonyMutantsPlayerControlled in the last Rimworld patch
 
 
